<?xml version="1.0"?>
<package format="2">
  <name>mrpt_map</name>
  <version>1.0.0</version>
  <description>The mrpt_map is able to publish a mrpt map as ros occupancy grid like the map_server</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>


  <license>BSD</license>
  <url>https://wiki.ros.org/mrpt_map</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrpt_bridge</depend>
  <depend>mrpt2</depend>

</package>
