<?xml version="1.0"?>
<package format="2">
  <name>mrpt_map</name>
  <version>1.0.1</version>
  <description>The mrpt_map is able to publish a mrpt map as ros occupancy grid like the map_server</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <maintainer email="joseluisblancoc@gmail.com">Jose Luis Blanco-Claraco</maintainer>

  <license>BSD</license>
  <url>https://wiki.ros.org/mrpt_map</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrpt2</depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>

</package>
