<?xml version="1.0"?>
<package format="3">
  <name>mrpt_map_server</name>
  <version>2.1.1</version>
  <description>This package provides a ROS 2 node that publishes a static map for other nodes to use it. Unlike classic ROS 1 ``map_server``, this node can publish a range of different metric maps, not only occupancy grids.</description>

  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <maintainer email="joseluisblancoc@gmail.com">Jose Luis Blanco-Claraco</maintainer>
  <maintainer email="shravansomashekara.rai@gmail.com">Shravan S Rai</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mp2p_icp</depend>
  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libros_bridge</depend>
  <depend>mrpt_msgs</depend>
  <depend>mrpt_nav_interfaces</depend>
  <depend>rclcpp_components</depend>

  <depend>ament_lint_common</depend>
  <depend>ament_lint_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
