<?xml version="1.0"?>
<package format="3">
  <name>mrpt_msgs_bridge</name>
  <version>2.2.0</version>
  <description>C++ library to convert between custom mrpt_msgs messages and native MRPT classes</description>

  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>
  <maintainer email="joseluisblancoc@gmail.com">José Luis Blanco-Claraco</maintainer>
  <maintainer email="shravansomashekara.rai@gmail.com">Shravan S Rai</maintainer>

  <author>José Luis Blanco-Claraco</author>
  <author>Shravan S Rai</author>

  <license>BSD</license>
  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>

  <build_depend>ros_environment</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mrpt_libobs</depend>
  <depend>mrpt_libros_bridge</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>

  <depend>mrpt_msgs</depend>

  <!-- <depend>marker_msgs</depend> -->  <!-- Re-enable when available in all ROS 2 distros -->

  <depend>ament_cmake_lint_cmake</depend>
  <depend>ament_cmake_xmllint</depend>
  <depend>ament_lint_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
