<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrpt_pf_localization</name>
  <version>2.0.1</version>
  <description>Package for robot 2D self-localization using dynamic or static (MRPT or ROS) maps.
	The interface is similar to amcl (https://wiki.ros.org/amcl)
   but supports different particle-filter algorithms, several grid maps at
   different heights, range-only localization, etc.</description>

  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <maintainer email="joseluisblancoc@gmail.com">Jose Luis Blanco-Claraco</maintainer>
  <author>Markus Bader</author>
  <author email="raffi.z@gmail.com">Raphael Zack</author>

  <license>BSD</license>
  <url>https://wiki.ros.org/mrpt_pf_localization</url>

  <!-- BUILD TOOLS -->
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- DEPS -->
  <depend>mrpt2</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mp2p_icp</depend>
  <depend>mola_relocalization</depend>
  <depend>mrpt_msgs</depend>
  <depend>mrpt_msgs_bridge</depend>
  <depend>pose_cov_ops</depend>

  <depend>ament_lint_common</depend>
  <depend>ament_lint_auto</depend>

  <test_depend>mrpt_tutorials</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
