<?xml version="1.0"?>
<package format="3">
  <name>mrpt_pointcloud_pipeline</name>
  <version>2.0.0</version>
  <description>Maintains a local obstacle map from recent sensor readings, including optional point cloud pipeline filtering or processing.</description>

  <maintainer email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</maintainer>
  <maintainer email="shravansomashekara.rai@gmail.com">Shravan S Rai</maintainer>

  <author email="jlblanco@ual.es">Jose-Luis Blanco-Claraco</author>
  <author email="shravansomashekara.rai@gmail.com">Shravan S Rai</author>

  <license>BSD</license>

  <url type="website">https://github.com/mrpt-ros-pkg/mrpt_navigation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mrpt2</depend>
  <depend>mp2p_icp</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>ament_lint_common</depend>
  <depend>ament_lint_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
